--- a/src/components/screens/PromptDrill.module.css
+++ b/src/components/screens/PromptDrill.module.css
@@ -1,5 +1,6 @@
 .screen {
   flex: 1;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background: var(--bg-0);
